fix latest post block spacing issue.

--- a/packages/block-library/src/latest-posts/style.scss
+++ b/packages/block-library/src/latest-posts/style.scss
@@ -51,8 +51,14 @@
 }
 
 .wp-block-latest-posts__post-excerpt {
-	margin-top: 0.5em;
+	margin-top: 1em;
 	margin-bottom: 1em;
+}
+
+/* Added space between block title & block full content */
+.wp-block-latest-posts__post-full-content {
+    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 .wp-block-latest-posts__featured-image {
